feat: 更新md文档、优化因Java版本迭代带来的警告
自此，该项目所有警告已全部去除